Working Model and Backend

--- a/Dog_Breed_Identification/dog-breed-identification.ipynb
+++ b/Dog_Breed_Identification/dog-breed-identification.ipynb
@@ -437,8 +437,7 @@
    },
    "outputs": [],
    "source": [
-    "from keras.applications.nasnet import NASNetLarge\n",
-    "from keras.applications.inception_resnet_v2 import InceptionResNetV2"
+    "from keras.applications.nasnet import NASNetLarge"
    ]
   },
   {
