requirements added and updated files.

--- a/Speech Emotion Recognition/Model/speech_emotion_recognition.ipynb
+++ b/Speech Emotion Recognition/Model/speech_emotion_recognition.ipynb
@@ -31,6 +31,7 @@
         "id": "rogXxAvGG2kT"
       },
       "source": [
+        "#import libraries which are required to make model\n",
         "import librosa\n",
         "import soundfile\n",
         "import os,glob,pickle\n",
@@ -41,7 +42,7 @@
         "from sklearn.neural_network import MLPClassifier\n",
         "from sklearn.metrics import accuracy_score"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,6 +60,7 @@
         "id": "LxrZbU_XHTOB"
       },
       "source": [
+        "#this function will extract the mfcc,chroma and mel features from sound file.\n",
         "def extract_feature(file_name, mfcc, chroma, mel):\n",
         "  with soundfile.SoundFile(file_name) as sound_file:\n",
         "    X = sound_file.read(dtype=\"float32\")\n",
@@ -81,7 +83,7 @@
         "    result = np.hstack((result,mel))\n",
         "  return result\n"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,6 +92,7 @@
         "id": "izZ3aBSDJzaF"
       },
       "source": [
+        "#emotions in the RAVDESS dataset\n",
         "emotions={\n",
         "  '01':'neutral',\n",
         "  '02':'calm',\n",
@@ -100,10 +103,10 @@
         "  '07':'disgust',\n",
         "  '08':'surprised'\n",
         "}\n",
-        "\n",
+        "#emotions we will observe\n",
         "observed_emotions=['calm', 'happy', 'fearful', 'disgust']"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +129,7 @@
         "    return train_test_split(np.array(x), y, test_size=test_size, random_state=9) \n",
         "    "
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,9 +138,10 @@
         "id": "4WTAm4DHMHnV"
       },
       "source": [
+        "# We will split the dataset in two parts train and test\n",
         "x_train,x_test,y_train,y_test=load_data(test_size=0.25)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,9 +154,10 @@
         "outputId": "14c8ab4c-fc1d-4f5b-9a4c-b771e5c36abd"
       },
       "source": [
+        "#we will get the shape of training and testing datasets\n",
         "print((x_train.shape[0], x_test.shape[0]))"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +178,10 @@
         "outputId": "a638d15c-312c-4df9-d417-a7c89dfaabb4"
       },
       "source": [
+        "#this will get the number of features extracted\n",
         "print(f'Features extracted: {x_train.shape[1]}')"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,9 +198,10 @@
         "id": "MAftchSpWa5f"
       },
       "source": [
+        "# initializing multi-layer perception classifier\n",
         "model=MLPClassifier(alpha=0.01, batch_size=256, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=500)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +216,7 @@
       "source": [
         "model.fit(x_train,y_train)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,9 +245,10 @@
         "id": "Zil16yQBWp8A"
       },
       "source": [
+        "#predict the test set\n",
         "y_pred=model.predict(x_test)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,11 +261,12 @@
         "outputId": "b5055e61-bdca-4d73-8c2f-1c219c28dc48"
       },
       "source": [
+        "#calculate the accuracy of our model\n",
         "accuracy = accuracy_score(y_true=y_test, y_pred=y_pred)\n",
         "\n",
         "print(\"Accuracy: {:.2f}%\".format(accuracy*100))"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,9 +283,10 @@
         "id": "3for_CQ3XRsQ"
       },
       "source": [
+        "#it will give casslification report of the model.\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +301,7 @@
       "source": [
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +335,7 @@
         "matrix = confusion_matrix(y_test,y_pred)\n",
         "print(matrix)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +369,7 @@
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.svm import SVC"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,9 +378,10 @@
         "id": "BP7Q54PPc_az"
       },
       "source": [
+        "#split the dataset in two parts train and test\n",
         "x_train,x_test,y_train,y_test=load_data(test_size=0.35)"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,10 +390,11 @@
         "id": "OdJJ9kNxdWrz"
       },
       "source": [
+        "#setup the pipeline steps \n",
         "steps = [('Scaler',StandardScaler()),\n",
         "         ('SVM',SVC())]"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,9 +403,10 @@
         "id": "7UjXc7AUdvnY"
       },
       "source": [
+        "#create the pipeline\n",
         "pipeline = Pipeline(steps)"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -402,9 +415,10 @@
         "id": "vlxua00zd0dS"
       },
       "source": [
+        "#fit the pipeline to training set to svc_scaled\n",
         "svc_scaled = pipeline.fit(x_train,y_train)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -413,9 +427,10 @@
         "id": "5tpHzrSEd985"
       },
       "source": [
+        "#fit the pipeline to training set to svc_unscaled\n",
         "svc_unscaled = SVC(kernel = 'linear').fit(x_train,y_train)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +445,7 @@
       "source": [
         "print('Accuracy with Scaling: {}'.format(svc_scaled.score(x_test,y_test)))"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +468,7 @@
       "source": [
         "print('Accuracy without Scaling : {}'.format(svc_unscaled.score(x_test,y_test)))"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +492,7 @@
         "train_acc = float(svc_scaled.score(x_train,y_train)*100)\n",
         "print(\"Train accuracy is %s\"% train_acc)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +516,7 @@
         "test_acc = float(svc_scaled.score(x_test,y_test)*100)\n",
         "print(\"Test accuracy is %s\"% test_acc)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +540,7 @@
         "train_acc = float(svc_unscaled.score(x_train,y_train)*100)\n",
         "print(\"Train accuracy is %s\"% train_acc)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +564,7 @@
         "test_acc = float(svc_unscaled.score(x_test,y_test)*100)\n",
         "print(\"Test accuracy is %s\"% test_acc)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +583,7 @@
       "source": [
         "scaled_predictions = svc_scaled.predict(x_test)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +594,7 @@
       "source": [
         "unscaled_predictions = svc_unscaled.predict(x_test)"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +605,7 @@
       "source": [
         "import seaborn as sn"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +620,7 @@
       "source": [
         "print(classification_report(y_test,scaled_predictions))"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +654,7 @@
         "acc = float(accuracy_score(y_test,scaled_predictions))*100\n",
         "print(\"Accuracy score is %s\"% acc)"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +678,7 @@
         "acc = float(accuracy_score(y_test,unscaled_predictions))*100\n",
         "print(\"Accuracy score is %s\"% acc)"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +698,7 @@
         "conf_mat = confusion_matrix(y_test,scaled_predictions)\n",
         "df_cm = pd.DataFrame(conf_mat)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +716,7 @@
         "sn.heatmap(df_cm, annot=True, fmt='')\n",
         "plt.show()"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,7 +768,7 @@
         "sn.heatmap(df_cm, annot=True, fmt='')\n",
         "plt.show()"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
