--- a/Fake Currency Prediction/Model/fake_currency_prediction.ipynb
+++ b/Fake Currency Prediction/Model/fake_currency_prediction.ipynb
@@ -449,7 +449,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x231e3e0b610>"
+       "<seaborn.axisgrid.PairGrid at 0x1ea27521ee0>"
       ]
      },
      "execution_count": 12,
@@ -704,22 +704,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[219  10]\n",
-      " [  1 182]]\n",
+      "[[223   6]\n",
+      " [  2 181]]\n",
       "\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.96      0.98       229\n",
-      "           1       0.95      0.99      0.97       183\n",
+      "           0       0.99      0.97      0.98       229\n",
+      "           1       0.97      0.99      0.98       183\n",
       "\n",
-      "    accuracy                           0.97       412\n",
-      "   macro avg       0.97      0.98      0.97       412\n",
-      "weighted avg       0.97      0.97      0.97       412\n",
+      "    accuracy                           0.98       412\n",
+      "   macro avg       0.98      0.98      0.98       412\n",
+      "weighted avg       0.98      0.98      0.98       412\n",
       "\n",
       "\n",
       "\n",
-      "0.9733009708737864\n"
+      "0.9805825242718447\n"
      ]
     }
    ],
@@ -744,22 +744,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[226   3]\n",
-      " [  2 181]]\n",
+      "[[224   5]\n",
+      " [  3 180]]\n",
       "\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.99      0.99       229\n",
-      "           1       0.98      0.99      0.99       183\n",
+      "           0       0.99      0.98      0.98       229\n",
+      "           1       0.97      0.98      0.98       183\n",
       "\n",
-      "    accuracy                           0.99       412\n",
-      "   macro avg       0.99      0.99      0.99       412\n",
-      "weighted avg       0.99      0.99      0.99       412\n",
+      "    accuracy                           0.98       412\n",
+      "   macro avg       0.98      0.98      0.98       412\n",
+      "weighted avg       0.98      0.98      0.98       412\n",
       "\n",
       "\n",
       "\n",
-      "0.9878640776699029\n"
+      "0.9805825242718447\n"
      ]
     }
    ],
@@ -778,6 +778,47 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "77a3eadc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[224   5]\n",
+      " [  5 178]]\n",
+      "\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98       229\n",
+      "           1       0.97      0.97      0.97       183\n",
+      "\n",
+      "    accuracy                           0.98       412\n",
+      "   macro avg       0.98      0.98      0.98       412\n",
+      "weighted avg       0.98      0.98      0.98       412\n",
+      "\n",
+      "\n",
+      "\n",
+      "0.9757281553398058\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "tree = DecisionTreeClassifier(criterion = \"entropy\", random_state = 0)\n",
+    "tree.fit(x_train, y_train)\n",
+    "tree_pred = tree.predict(x_test)\n",
+    "print (confusion_matrix(y_test,tree_pred))\n",
+    "print('\\n')\n",
+    "print (classification_report(y_test,tree_pred))\n",
+    "print('\\n')\n",
+    "print (accuracy_score(y_test,tree_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "0efb3c67",
    "metadata": {},
    "outputs": [],
