--- a/Netflix EDA and Recommedation System/Model/Netflix_EDA_and_Recommendation_System.ipynb
+++ b/Netflix EDA and Recommedation System/Model/Netflix_EDA_and_Recommendation_System.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Here I have done a detailed analysis of netflix content data with great visualisations and built a model to predict the genre of the movie."
+    "### Here I have done a detailed analysis of netflix content data with great visualisations and built a Recommendation System."
    ]
   },
   {
@@ -2409,7 +2409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot description based Recommender"
+    "## Plot description based Recommendation System"
    ]
   },
   {
@@ -2630,7 +2630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genre,cast,director  based recommender system"
+    "## Multiple metrics(Genre,cast,director) based Recommendation System"
    ]
   },
   {
