--- a/World Population by Year analysis/Models/World_Population_by_year_analysis.ipynb
+++ b/World Population by Year analysis/Models/World_Population_by_year_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "5  2016  7464022049        1.14   84224910       50  4060652683         54"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "(70, 7)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "max    4.378994e+09  56.000000  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -544,16 +544,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x174b917f130>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x174c08dc400>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -576,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x174b8d17880>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x174c08ee760>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -609,16 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x174b81f5d30>"
+       "<seaborn.axisgrid.PairGrid at 0x174c30ab340>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,8 @@
       "Mean Absolute Error: 33803393.75958949\n",
       "Linear Regression Coefficients: [ 7.43664055e+08 -8.79794405e+07  6.38572500e+08  1.23033214e+08]\n",
       "R2 Score: 0.9990599862236123\n",
-      "Mean Squared Error: 1896014273658965.2\n"
+      "Mean Squared Error: 1896014273658965.2\n",
+      "Final Score: 5.2692639622575544e-14\n"
      ]
     }
    ],
@@ -776,7 +777,8 @@
     "print('Mean Absolute Error:',mean_absolute_error(Y_test,Y_pred_LR))\n",
     "print('Linear Regression Coefficients:',model_LR.coef_)\n",
     "print('R2 Score:',r2_score(Y_test,Y_pred_LR))\n",
-    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_LR))"
+    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_LR))\n",
+    "print('Final Score:',(r2_score(Y_test,Y_pred_LR)*100)/(mean_squared_error(Y_test,Y_pred_LR)+mean_absolute_error(Y_test,Y_pred_LR)))"
    ]
   },
   {
@@ -788,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +887,8 @@
       " [ 0.4749821  -0.44029287  0.52066663  0.62376716]\n",
       " [ 0.50953088 -0.51799373  0.50500949  0.60630454]]\n",
       "R2 Score: 0.9717703193951238\n",
-      "Mean Squared Error: 5.69394605825428e+16\n"
+      "Mean Squared Error: 5.69394605825428e+16\n",
+      "Final Score: 1.7066728521663304e-15\n"
      ]
     }
    ],
@@ -893,30 +896,31 @@
     "print('Mean Absolute Error:',mean_absolute_error(Y_test,Y_pred_LGR))\n",
     "print('Linear Regression Coefficients:\\n',model_LGR.coef_)\n",
     "print('R2 Score:',r2_score(Y_test,Y_pred_LGR))\n",
-    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_LGR))"
+    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_LGR))\n",
+    "print('Final Score:',(r2_score(Y_test,Y_pred_LGR)*100)/(mean_squared_error(Y_test,Y_pred_LGR)+mean_absolute_error(Y_test,Y_pred_LGR)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kernel Ridge"
+    "### Kernel Ridge Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_KR=KernelRidge(kernel='rbf', alpha=0.1, gamma=0.1)\n",
-    "model_KR.fit(X_train,Y_train)\n",
-    "Y_pred_KR=model_KR.predict(X_test)"
+    "model_KRR=KernelRidge(kernel='rbf', alpha=0.1, gamma=0.1)\n",
+    "model_KRR.fit(X_train,Y_train)\n",
+    "Y_pred_KRR=model_KRR.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +938,7 @@
    ],
    "source": [
     "plt.scatter(X_test['Year'], Y_test, color = 'red')\n",
-    "sns.lineplot(X_test['Year'],Y_pred_KR, color = 'blue')\n",
+    "sns.lineplot(X_test['Year'],Y_pred_KRR, color = 'blue')\n",
     "plt.title('World Population Prediction: Kernel Ridge')\n",
     "plt.xlabel('Scaled Year')\n",
     "plt.ylabel('Population')\n",
@@ -943,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -952,14 +956,16 @@
      "text": [
       "Mean Absolute Error: 92449024.91959827\n",
       "R2 Score: 0.9944767667649214\n",
-      "Mean Squared Error: 1.1140399548928138e+16\n"
+      "Mean Squared Error: 1.1140399548928138e+16\n",
+      "Final Score: 8.926760248988567e-15\n"
      ]
     }
    ],
    "source": [
-    "print('Mean Absolute Error:',mean_absolute_error(Y_test,Y_pred_KR))\n",
-    "print('R2 Score:',r2_score(Y_test,Y_pred_KR))\n",
-    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_KR))"
+    "print('Mean Absolute Error:',mean_absolute_error(Y_test,Y_pred_KRR))\n",
+    "print('R2 Score:',r2_score(Y_test,Y_pred_KRR))\n",
+    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_KRR))\n",
+    "print('Final Score:',(r2_score(Y_test,Y_pred_KRR)*100)/(mean_squared_error(Y_test,Y_pred_KRR)+mean_absolute_error(Y_test,Y_pred_KRR)))"
    ]
   },
   {
@@ -971,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1018,14 +1024,16 @@
      "text": [
       "Mean Absolute Error: 73621005.14285715\n",
       "R2 Score: 0.9968942494250208\n",
-      "Mean Squared Error: 6264320341360499.0\n"
+      "Mean Squared Error: 6264320341360499.0\n",
+      "Final Score: 1.591384513220121e-14\n"
      ]
     }
    ],
    "source": [
     "print('Mean Absolute Error:',mean_absolute_error(Y_test,Y_pred_XGB))\n",
     "print('R2 Score:',r2_score(Y_test,Y_pred_XGB))\n",
-    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_XGB))"
+    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_XGB))\n",
+    "print('Final Score:',(r2_score(Y_test,Y_pred_XGB)*100)/(mean_squared_error(Y_test,Y_pred_XGB)+mean_absolute_error(Y_test,Y_pred_XGB)))"
    ]
   },
   {
@@ -1037,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1084,14 +1092,23 @@
      "text": [
       "Mean Absolute Error: 54836079.01761898\n",
       "R2 Score: 0.9967004821427558\n",
-      "Mean Squared Error: 6655150286804994.0\n"
+      "Mean Squared Error: 6655150286804994.0\n",
+      "Final Score: 1.497637815792727e-14\n"
      ]
     }
    ],
    "source": [
     "print('Mean Absolute Error:',mean_absolute_error(Y_test,Y_pred_RFR))\n",
     "print('R2 Score:',r2_score(Y_test,Y_pred_RFR))\n",
-    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_RFR))"
+    "print('Mean Squared Error:',mean_squared_error(Y_test,Y_pred_RFR))\n",
+    "print('Final Score:',(r2_score(Y_test,Y_pred_RFR)*100)/(mean_squared_error(Y_test,Y_pred_RFR)+mean_absolute_error(Y_test,Y_pred_RFR)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since, final score of Linear regression is highest among all the rest of the models, so, Linear regression model works best for the current world population prediction model."
    ]
   }
  ],
