--- a/Customer Income Segmentation Analysis/Model/customer_segmentation.ipynb
+++ b/Customer Income Segmentation Analysis/Model/customer_segmentation.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(new_features,target,random_state=12)"
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "source": [
     "model = LogisticRegression()\r\n",
     "model.fit(x_train,y_train)\r\n",
@@ -550,9 +550,9 @@
       "\n",
       "           0       0.00      0.00      0.00         9\n",
       "           1       0.53      1.00      0.69        17\n",
-      "           2       1.00      1.00      1.00         7\n",
-      "           3       1.00      0.67      0.80        12\n",
-      "           4       1.00      0.60      0.75         5\n",
+      "           2       1.00      0.67      0.80        12\n",
+      "           3       1.00      0.60      0.75         5\n",
+      "           4       1.00      1.00      1.00         7\n",
       "\n",
       "    accuracy                           0.70        50\n",
       "   macro avg       0.71      0.65      0.65        50\n",
@@ -572,6 +572,28 @@
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
       "C:\\Users\\Dilrose\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
+    "# predictions on known using Logistic Regression\r\n",
+    "ai = float(input(\"Enter annual income: \"))  #15\r\n",
+    "ss = float(input(\"Enter spending score: \")) #39\r\n",
+    "d = [[ai,ss]]\r\n",
+    "dt = scaler.transform(d)\r\n",
+    "print(\"Cluster: \",model.predict(dt))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Cluster:  [1]\n"
      ]
     }
    ],
