--- a/Stocks and Crypto Research Analysis/Model/Stocks and Crypto Research Analysis.ipynb
+++ b/Stocks and Crypto Research Analysis/Model/Stocks and Crypto Research Analysis.ipynb
@@ -5,7 +5,18 @@
    "id": "989f0b32",
    "metadata": {},
    "source": [
-    "# Stock Prices Prediction Using Machine Learning and Deep Learning Techniques"
+    "# Stock Prices Prediction Using Machine Learning and Deep Learning Techniques\n",
+    "\n",
+    "# Problem Statement\n",
+    "We are going to use Time Series data to analysis of stock price(Apple company dataset).\n",
+    "\n",
+    "Time series forecasting is a technique for the prediction of events through a sequence of time. The technique is used across many fields of study, from geology to behavior to economics. The techniques predict future events by analyzing the trends of the past, on the assumption that future trends will hold similar to historical trends.\n",
+    "Time Series forecasting & modeling plays an important role in data analysis. \n",
+    "\n",
+    "Time Series is being widely used in analytics & data science.  Stock Prices Prediction problem is based on  Time Series data.\n",
+    "# Goal\n",
+    "The goal of this project is to make a prediction model which will predict the future stock price based on the given dataset.\n",
+    "\n"
    ]
   },
   {
@@ -13,13 +24,25 @@
    "id": "ab0d47dd",
    "metadata": {},
    "source": [
-    "# <b>Model Used<b/>\n",
-    "    \n",
-    "<b>Long Short Term Memory (LSTM)</b>\n",
-    "    \n",
-    "<b>Linear Regression</b>\n",
-    "    \n",
-    "<b>k-Nearest Neighbors</b>"
+    "\n",
+    "# Contents\n",
+    " 1. Problem Statement\n",
+    " 2. Goal\n",
+    " 3. Importing required libraries and Dataset\n",
+    " 4. Feature Scaling\n",
+    " 5. Time Series Split\n",
+    " 7. Prediction Models\n",
+    "  \n",
+    "      1] Long short-term memory (LSTM)\n",
+    "      \n",
+    "      2] Linear Regression\n",
+    "      \n",
+    "      3] k-Nearest Neighbors\n",
+    "\n",
+    "\n",
+    " 8. Conclusion\n",
+    " \n",
+    "  \n"
    ]
   },
   {
@@ -28,7 +51,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Long Short Term Memory (LSTM)"
+    "# Importing required libraries and Dataset"
    ]
   },
   {
@@ -443,6 +466,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e82c7947",
+   "metadata": {},
+   "source": [
+    "# Feature Scaling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "735d1033",
@@ -477,6 +508,14 @@
    "source": [
     "\n",
     "print(df1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db8aac12",
+   "metadata": {},
+   "source": [
+    "# Time Series Split"
    ]
   },
   {
@@ -615,6 +654,14 @@
     "\n",
     "X_train =X_train.reshape(X_train.shape[0],X_train.shape[1] , 1)\n",
     "X_test = X_test.reshape(X_test.shape[0],X_test.shape[1] , 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a86c03fd",
+   "metadata": {},
+   "source": [
+    "# Long Short Term Memory (LSTM)"
    ]
   },
   {
@@ -2228,12 +2275,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "703fcf96",
+   "cell_type": "markdown",
+   "id": "2ab666ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "\n",
+    "In Long Short Term Memory (LSTM) model, we get Root-mean-square error (RMSE) value 143.27\n",
+    "\n",
+    "In  Linear Regression model,we get Root-mean-square error (RMSE) value 50.57\n",
+    "\n",
+    "In KNN model,we get Root-mean-square error (RMSE) value 94.18.\n",
+    "\n",
+    "So the Long short-term memory (LSTM) stand out to be the best model among all those implemented models based on the accuracy scores."
+   ]
   }
  ],
  "metadata": {
